--- a/ggmeet.csproj
+++ b/ggmeet.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\img\icons\" />
   </ItemGroup>
 
 </Project>
