--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ggmeetContext": "Server=(localdb)\\mssqllocaldb;Database=ggmeetContext-a2b47708-68a3-48ac-a37c-fc8db7ff770d;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
